# llm-refinery

./: .gitignore  BENCHMARK_SUMMARY.md  README.md  pyproject.toml
benchmarks/: dabstep-smoke.yaml  geoanalystbench-full-llama-gemma4-26b-ud-q4-k-xl-max8192.yaml  geoanalystbench-llama-gemma4-26b-ud-q4-k-xl-max8192.yaml  geoanalystbench-llama-gemma4-26b-ud-q4-k-xl.yaml  geoanalystbench-ollama-gemma4-12b-q8-max8192.yaml  geoanalystbench-ollama-gemma4-12b-q8.yaml  geoanalystbench-smoke.yaml
docs/: architecture.md  dabstep-refactor.md  dabstep.md  dgx-spark.md  geoanalystbench.md  migration.md
evals/: README.md
sweeps/: cerebras-gemma4-31b-http-load.yaml  dgx-spark-quality-smoke-suite.yaml  diffusiongemma-26b-mlx-http-load.yaml  diffusiongemma-26b-mlx-vlm-sweep.yaml  gemma-cache-sweep.yaml  gemma-f16-kv-batch-neighborhood.yaml  gemma-http-load-ollama-compare.yaml  gemma-q8-b512-ub512-quality-next.yaml  gemma-q8-b512-ub512-runtime-triage.yaml  gemma-q8-prefill-b512-ub512-sweep.yaml  gemma4-12b-unsloth-q8-mtp-http-load.yaml  gemma4-12b-unsloth-q8-mtp-llama-sweep.yaml  gemma4-12b-unsloth-qat-mtp-http-load.yaml  gemma4-12b-unsloth-qat-mtp-llama-sweep.yaml  gemma4-12b-unsloth-qat-ud-q4-k-xl-http-load.yaml  gemma4-12b-unsloth-qat-ud-q4-k-xl-llama-sweep.yaml  gemma4-12b-unsloth-ud-q4-k-xl-http-load.yaml  gemma4-12b-unsloth-ud-q4-k-xl-llama-sweep.yaml  gemma4-26b-qat-http-load.yaml  gemma4-31b-mlx-ollama-http-load.yaml  gemma4-31b-ollama-http-load.yaml  gemma4-31b-qat-http-load.yaml  gemma4-31b-suite.yaml  huihui-gemma4-12b-abliterated-http-load.yaml  local-http-load-recommended.yaml  (+13 more)
(+167 files in other folders)
