[project]
name = "llama-cpp-tune"
version = "0.1.0"
description = "Lightweight llama.cpp tuning and benchmarking harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.0",
  "duckdb>=1.1.0",
  "PyYAML>=6.0.2",
  "rich>=13.9.0",
]

[project.scripts]
llama-tune = "llama_tune.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_tune"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
