[project]
name = "llm-refinery"
version = "0.1.0"
description = "Local LLM benchmarking and serving workflow harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.0",
  "duckdb>=1.1.0",
  "PyYAML>=6.0.2",
  "rich>=13.9.0",
]

[project.scripts]
llm-refinery = "llm_refinery.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_refinery"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["src/llm_refinery"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
